--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'idea'
 
 
 group = 'cz.siret'
-version = '2.0-rc.3_JAVAAPI'
+version = '2.0-rc.3_JAVAAPI.1'
 
 
 description = 'Ligand binding site prediction based on machine learning.'
@@ -98,6 +98,7 @@ dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.4.7'
     compile 'org.codehaus.gpars:gpars:1.2.1'
     compile "org.apache.commons:commons-lang3:3.4"
+    compile "commons-io:commons-io:2.5"
     compile "com.google.guava:guava:19.0"
 
     compile 'org.slf4j:slf4j-api:1.7.21'
