FeatureCalculator API for adding new features

--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'idea'
 
 
 group = 'cz.siret'
-version = '2.0-rc.3_JAVAAPI.1'
+version = '2.0-rc.4_SNAPSHOT'
 
 
 description = 'Ligand binding site prediction based on machine learning.'
@@ -73,7 +73,7 @@ task copyBinaryToDist( type: Copy ) {
 assemble {
     dependsOn processResources
     dependsOn copyBinaryToDist
-    //dependsOn copyDependenciesToDist
+    dependsOn copyDependenciesToDist // copy dependencies to distro dir
 }
 
 jar {
@@ -84,10 +84,10 @@ jar {
         attributes 'Main-Class': 'cz.siret.p2rank.program.Main'
     }
 
-    //fat jar: include all dependencies
-    from {
-        configurations.compile.filter( {! (it.name =~ /.*\.pom/ )}).collect { it.isDirectory() ? it : zipTree(it) }
-    }
+    //make fat jar: include all dependencies
+    //    from {
+    //        configurations.compile.filter( {! (it.name =~ /.*\.pom/ )}).collect { it.isDirectory() ? it : zipTree(it) }
+    //    }
 }
 
 clean {
