--- a/build.gradle
+++ b/build.gradle
@@ -81,7 +81,7 @@ jar {
     destinationDir = file("build/bin")
 
     manifest {
-        attributes 'Main-Class': 'cz.siret.p2rank.program.Main'
+        attributes 'Main-Class': 'cz.siret.prank.program.Main'
     }
 
     //make fat jar: include all dependencies
@@ -95,24 +95,24 @@ clean {
 }
 
 dependencies {
-    compile 'org.codehaus.groovy:groovy-all:2.4.7'
+    compile 'org.codehaus.groovy:groovy-all:2.4.8'
     compile 'org.codehaus.gpars:gpars:1.2.1'
-    compile "org.apache.commons:commons-lang3:3.4"
+    compile "org.apache.commons:commons-lang3:3.5"
     compile "commons-io:commons-io:2.5"
-    compile "com.google.guava:guava:19.0"
+    compile "com.google.guava:guava:21.0"
 
-    compile 'org.slf4j:slf4j-api:1.7.21'
+    compile 'org.slf4j:slf4j-api:1.7.23'
     compile 'org.apache.logging.log4j:log4j-slf4j-impl:2.5'
 
-	compile 'org.biojava:biojava-core:4.2.4'
-	compile 'org.biojava:biojava-alignment:4.2.4'
-	compile 'org.biojava:biojava-structure:4.2.4-rdk1'
+	compile 'org.biojava:biojava-core:4.2.6'
+	compile 'org.biojava:biojava-alignment:4.2.6'
+	compile 'org.biojava:biojava-structure:4.2.6-rdk1'
 
-    compile 'org.openscience.cdk:cdk-qsarmolecular:1.5.13'    // for NumericalSurface class
-    compile 'org.openscience.cdk:cdk-data:1.5.13'             // for Atom class
+    compile 'org.openscience.cdk:cdk-qsarmolecular:1.5.14'    // for NumericalSurface class
+    compile 'org.openscience.cdk:cdk-data:1.5.14'             // for Atom class
     // compile 'com.github.fommil.netlib:all:1.1.2'              // for weka
-    compile 'nz.ac.waikato.cms.weka:weka-dev:3.9.0'
-    compile files('lib/biojava-structure-4.2.4-rdk1.jar')     // customized fork for pocket-rank
+    compile 'nz.ac.waikato.cms.weka:weka-dev:3.9.1'
+    compile files('lib/biojava-structure-4.2.6-rdk1.jar')     // customized fork for pocket-rank
     compile fileTree(dir: 'lib', include: '*.jar')
 
     testCompile 'junit:junit:4.12'
