--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,8 @@ env:
 
 jdk:
   - oraclejdk8
+
+script:
+  - java -version
+  - gradle -version
+  - gradle --refresh-dependencies clean check -Dscan --info
