--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: groovy
 
 env:
   global:
-    - GRADLE_OPTS=-Xmx1500m
+    - GRADLE_OPTS=-Xmx1524m
 
 jdk:
   - oraclejdk8
@@ -11,4 +11,4 @@ script:
   - java -version
   - gradle -version
   - gradle --stop
-  - gradle --refresh-dependencies clean check -Dscan --info
+  - gradle --refresh-dependencies clean check -Dscan --info -Xmx1524m
