--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ apply plugin: 'idea'
 
 
 group = 'cz.siret'
-version = '2.0-dev.6_SNAPSHOT' 
+version = '2.0-dev.7_CHEMFEAT'
 
 description = 'Ligand binding site prediction based on machine learning.'
 
