--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ apply plugin: 'idea'
 
 
 group = 'cz.siret'
-version = '2.0-dev.7'
+version = '2.0-dev.8d'
 
 description = 'Ligand binding site prediction based on machine learning.'
 
