First temporary conservation feature implementation.

--- a/build.gradle
+++ b/build.gradle
@@ -118,6 +118,8 @@ dependencies {
     compile "com.google.guava:guava:21.0"
     compile 'org.zeroturnaround:zt-zip:1.11'
 
+    compile group: 'com.univocity', name: 'univocity-parsers', version: '2.4.0' // For parsing csv
+
     compile 'org.slf4j:slf4j-api:1.7.24'
     compile 'org.apache.logging.log4j:log4j-slf4j-impl:2.5' // 2.8 was causing problem with biojava
 
