--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ apply plugin: 'idea'
 
 
 group = 'cz.siret'
-version = '2.0-dev.13'
+version = '2.0-dev.14'
 
 description = 'Ligand binding site prediction based on machine learning.'
 
@@ -86,7 +86,8 @@ jar {
 }
 
 clean {
-    delete "$buildDir/../distro/bin/lib"
+    delete "$buildDir/../distro/bin"
+    delete "$buildDir/../distro/test_output"
 }
 
 test {
@@ -124,15 +125,13 @@ dependencies {
     compile 'org.slf4j:slf4j-api:1.7.24'
     compile 'org.apache.logging.log4j:log4j-slf4j-impl:2.5' // 2.8 was causing problem with biojava
 
-	compile 'org.biojava:biojava-core:4.2.6'
-	compile 'org.biojava:biojava-alignment:4.2.6'
-	compile 'org.biojava:biojava-structure:4.2.6-rdk1'
+	compile 'org.biojava:biojava-core:4.2.8'
+	compile 'org.biojava:biojava-alignment:4.2.8'
+	compile 'org.biojava:biojava-structure:4.2.8'
 
     compile 'org.openscience.cdk:cdk-qsarmolecular:1.5.14'    // for NumericalSurface class
     compile 'org.openscience.cdk:cdk-data:1.5.14'             // for Atom class
-    // compile 'com.github.fommil.netlib:all:1.1.2'              // for weka
     compile 'nz.ac.waikato.cms.weka:weka-dev:3.9.1'
-    compile files('lib/biojava-structure-4.2.6-rdk1.jar')     // customized fork for pocket-rank
     compile fileTree(dir: 'lib', include: '*.jar')
 
     testCompile 'junit:junit:4.12'
