--- a/build.gradle
+++ b/build.gradle
@@ -124,6 +124,7 @@ dependencies {
 
     compile 'org.slf4j:slf4j-api:1.7.24'
     compile 'org.apache.logging.log4j:log4j-slf4j-impl:2.5' // 2.8 was causing problem with biojava
+    compile 'org.slf4j:jul-to-slf4j:1.7.24'                 // for netlib logging messages
 
     compile 'org.biojava:biojava-core:4.2.8'
     compile 'org.biojava:biojava-alignment:4.2.8'
