--- a/build.gradle
+++ b/build.gradle
@@ -114,10 +114,10 @@ test {
 dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.4.13'
     compile 'org.codehaus.gpars:gpars:1.2.1'
-    compile "org.apache.commons:commons-lang3:3.6"
-    compile "commons-io:commons-io:2.5"
-    compile "com.google.guava:guava:23.0"
-    compile 'com.google.code.gson:gson:2.8.1'
+    compile "org.apache.commons:commons-lang3:3.7"
+    compile "commons-io:commons-io:2.6"
+    compile "com.google.guava:guava:24.0-jre"
+    compile 'com.google.code.gson:gson:2.8.2'
     compile 'org.zeroturnaround:zt-zip:1.12'
 
     compile group: 'com.univocity', name: 'univocity-parsers', version: '2.4.0' // For parsing csv
@@ -126,13 +126,13 @@ dependencies {
     compile 'org.apache.logging.log4j:log4j-slf4j-impl:2.5' // 2.8 was causing problem with biojava
     compile 'org.slf4j:jul-to-slf4j:1.7.24'                 // for netlib logging messages
 
-    compile 'org.biojava:biojava-core:4.2.8'
-    compile 'org.biojava:biojava-alignment:4.2.8'
-    compile 'org.biojava:biojava-structure:4.2.8'
+    compile 'org.biojava:biojava-core:4.2.11'
+    compile 'org.biojava:biojava-alignment:4.2.11'
+    compile 'org.biojava:biojava-structure:4.2.11'
 
-    compile 'org.openscience.cdk:cdk-qsarmolecular:1.5.15'    // for NumericalSurface class
-    compile 'org.openscience.cdk:cdk-data:1.5.15'             // for Atom class
-    compile 'nz.ac.waikato.cms.weka:weka-dev:3.9.1'
+    compile 'org.openscience.cdk:cdk-qsarmolecular:2.1.1'    // for NumericalSurface class
+    compile 'org.openscience.cdk:cdk-data:2.1.1'             // for Atom class
+    compile 'nz.ac.waikato.cms.weka:weka-dev:3.9.2'
     compile fileTree(dir: 'lib', include: '*.jar')
 
     testCompile 'junit:junit:4.12'
