--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ apply plugin: 'idea'
 
 
 group = 'cz.siret'
-version = '2.0-pre.2-pept'
+version = '2.0-pept-dev2'
 
 description = 'Ligand binding site prediction based on machine learning.'
 
