--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,13 @@ env:
 
 jdk:
   - oraclejdk8
+  - oraclejdk11
 
 addons:
   apt:
     packages:
       - oracle-java8-installer
+      - oracle-java11-installer
 
 script:
   - java -version
