--- a/build.gradle
+++ b/build.gradle
@@ -130,6 +130,8 @@ dependencies {
     compile 'org.biojava:biojava-core:4.2.12'
     compile 'org.biojava:biojava-alignment:4.2.12'
     compile 'org.biojava:biojava-structure:4.2.12'
+    compile 'javax.xml.bind:jaxb-api:2.3.0'           // dependency of biojava for java 11
+
 
     compile 'org.openscience.cdk:cdk-qsarmolecular:1.5.15'    // for NumericalSurface class
     compile 'org.openscience.cdk:cdk-data:1.5.15'             // for Atom class
