--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,3 @@
-//plugins {
-//    id 'com.github.ben-manes.versions' version '0.14.0'
-//    // run "gradle dependencyUpdates -Drevision=release" to check dependency updates
-//}
-
 apply plugin: 'groovy'
 apply plugin: 'java'
 apply plugin: 'idea'
@@ -12,6 +7,7 @@ group = 'cz.siret'
 version = '2.0-rc.6'
 
 description = 'Ligand binding site prediction based on machine learning.'
+
 
 allprojects {
     apply plugin: 'java'
@@ -34,8 +30,6 @@ repositories {
 
     flatDir(dirs: 'lib')
 }
-
-
 
 sourceSets {
     main {
@@ -120,18 +114,18 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.1'
     compile 'org.zeroturnaround:zt-zip:1.12'
 
-    compile group: 'com.univocity', name: 'univocity-parsers', version: '2.4.0' // For parsing csv
+    compile 'com.univocity:univocity-parsers:2.4.0' // for parsing csv
 
     compile 'org.slf4j:slf4j-api:1.7.26'
-    compile 'org.apache.logging.log4j:log4j-slf4j-impl:2.11.2' // 2.8 was causing problem with biojava
+    compile 'org.apache.logging.log4j:log4j-slf4j-impl:2.11.2' 
     compile 'org.apache.logging.log4j:log4j-core:2.11.2'
-    compile 'org.slf4j:jul-to-slf4j:1.7.26'                 // for netlib logging messages
+    compile 'org.slf4j:jul-to-slf4j:1.7.26'         // for netlib logging messages
 
     compile 'org.biojava:biojava-core:4.2.12'
     compile 'org.biojava:biojava-alignment:4.2.12'
     compile 'org.biojava:biojava-structure:4.2.12'
 
-    compile 'javax.xml.bind:jaxb-api:2.2.11'      // dependencies of biojava for java 11
+    compile 'javax.xml.bind:jaxb-api:2.2.11'      // extra dependencies of biojava for java 11
     compile 'com.sun.xml.bind:jaxb-core:2.2.11'
     compile 'com.sun.xml.bind:jaxb-impl:2.2.11'
     compile 'javax.activation:activation:1.1.1'
