--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'idea'
 
 
 group = 'cz.siret'
-version = '2.0-rc.6'
+version = '2.0'
 
 description = 'Ligand binding site prediction based on machine learning.'
 
