--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,15 @@ env:
 jdk:
   - oraclejdk8
   - oraclejdk11
+  - openjdk-ea
   - openjdk8
   - openjdk11
   - openjdk-ea  
+  
+matrix:
+  allow_failures:
+    - jdk: openjdk-ea  
+    - jdk: oraclejdk-ea 
 
 script:
   - java -version
