--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,12 @@ env:
 jdk:
   - oraclejdk8
   - oraclejdk11
+  - oraclejdk13
   - oraclejdk-ea
   - openjdk8
   - openjdk11
-  - openjdk-ea  
+  - openjdk13
+  - openjdk-ea
   
 matrix:
   allow_failures:
