--- a/build.gradle
+++ b/build.gradle
@@ -114,33 +114,31 @@ dependencies {
     compile 'org.codehaus.groovy:groovy-all:3.0.2'
     
     compile 'org.codehaus.gpars:gpars:1.2.1'
-    compile "org.apache.commons:commons-lang3:3.7"
-    compile "commons-io:commons-io:2.6"
-    compile "com.google.guava:guava:24.0-jre"
-    compile 'com.google.code.gson:gson:2.8.2'
-    compile 'org.zeroturnaround:zt-zip:1.12'
+    compile 'org.apache.commons:commons-lang3:3.9'
+    compile 'commons-io:commons-io:2.6'
+    compile 'com.google.guava:guava:28.2-jre'
+    compile 'com.google.code.gson:gson:2.8.6'
+    compile 'org.zeroturnaround:zt-zip:1.14'
+    compile 'com.univocity:univocity-parsers:2.8.4' // for parsing csv
 
-    compile 'com.univocity:univocity-parsers:2.4.0' // for parsing csv
-
-    compile 'org.slf4j:slf4j-api:1.7.26'
-    compile 'org.apache.logging.log4j:log4j-slf4j-impl:2.11.2' 
-    compile 'org.apache.logging.log4j:log4j-core:2.11.2'
-    compile 'org.slf4j:jul-to-slf4j:1.7.26'         // for netlib logging messages
+    compile 'org.slf4j:slf4j-api:1.7.30'
+    compile 'org.apache.logging.log4j:log4j-slf4j-impl:2.13.1'
+    compile 'org.apache.logging.log4j:log4j-core:2.13.1'
+    compile 'org.slf4j:jul-to-slf4j:1.7.30'         // for netlib logging messages
 
     compile 'org.biojava:biojava-core:4.2.12'
     compile 'org.biojava:biojava-alignment:4.2.12'
     compile 'org.biojava:biojava-structure:4.2.12'
+    compile 'javax.xml.bind:jaxb-api:2.3.1'      // extra dependencies of biojava for java 11
+    compile 'com.sun.xml.bind:jaxb-core:2.3.0.1' // ~
+    compile 'com.sun.xml.bind:jaxb-impl:2.3.2'   // ~
+    compile 'javax.activation:activation:1.1.1'  // ~
 
-    compile 'javax.xml.bind:jaxb-api:2.2.11'      // extra dependencies of biojava for java 11
-    compile 'com.sun.xml.bind:jaxb-core:2.2.11'
-    compile 'com.sun.xml.bind:jaxb-impl:2.2.11'
-    compile 'javax.activation:activation:1.1.1'
-
-    compile 'org.openscience.cdk:cdk-qsarmolecular:2.1.1'    // for NumericalSurface class
-    compile 'org.openscience.cdk:cdk-data:2.1.1'             // for Atom class
-    compile 'nz.ac.waikato.cms.weka:weka-dev:3.9.2'
+    compile 'org.openscience.cdk:cdk-qsarmolecular:2.3'    // for NumericalSurface class
+    compile 'org.openscience.cdk:cdk-data:2.3'             // for Atom class
+    compile 'nz.ac.waikato.cms.weka:weka-dev:3.9.4'
     compile fileTree(dir: 'lib', include: '*.jar')
 
-    testCompile 'junit:junit:4.12'
+    testCompile 'junit:junit:4.13'
 }
 
