--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,15 @@ env:
 jdk:
   - oraclejdk8
   - oraclejdk11
+  - oraclejdk12
   - oraclejdk13
+  - oraclejdk14
   - oraclejdk-ea
   - openjdk8
   - openjdk11
+  - openjdk12
   - openjdk13
+  - openjdk14
   - openjdk-ea
   
 matrix:
