--- a/build.gradle
+++ b/build.gradle
@@ -120,6 +120,7 @@ test {
 dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.5.10'
 //    compile 'org.codehaus.groovy:groovy-all:3.0.2' // still buggy
+    compile group: 'org.apache.commons', name: 'commons-csv', version: '1.8'
 
     compile 'org.codehaus.gpars:gpars:1.2.1'
     compile 'org.apache.commons:commons-lang3:3.9'
