--- a/build.gradle
+++ b/build.gradle
@@ -118,17 +118,17 @@ test {
 
 
 dependencies {
-    compile 'org.codehaus.groovy:groovy-all:2.5.10'
+    compile 'org.codehaus.groovy:groovy-all:2.5.12'
 //    compile 'org.codehaus.groovy:groovy-all:3.0.2' // still buggy
 
     compile 'org.codehaus.gpars:gpars:1.2.1'
-    compile 'org.apache.commons:commons-lang3:3.9'
-    compile 'commons-io:commons-io:2.6'
-    compile 'com.google.guava:guava:28.2-jre'
+    compile 'org.apache.commons:commons-lang3:3.10'
+    compile 'commons-io:commons-io:2.7'
+    compile 'com.google.guava:guava:29-jre'
     compile 'com.google.code.gson:gson:2.8.6'
     compile 'org.zeroturnaround:zt-zip:1.14'
     compile 'com.univocity:univocity-parsers:2.8.4' // csv parser
-    compile 'org.apache.commons:commons-csv:1.8:'
+    compile 'org.apache.commons:commons-csv:1.8'
 
     compile 'org.slf4j:slf4j-api:1.7.30'
     compile 'org.apache.logging.log4j:log4j-slf4j-impl:2.13.1'
