--- a/build.gradle
+++ b/build.gradle
@@ -98,7 +98,7 @@ test {
     // testLogging.showStandardStreams = true
 
     // set heap size for the test JVM(s)
-    maxHeapSize = "1512m"
+    maxHeapSize = "4g"
     
     def distroDir = "$project.projectDir/distro"
     inputs.dir "$distroDir/test_data"
@@ -132,6 +132,10 @@ dependencies {
     implementation 'org.zeroturnaround:zt-zip:1.14'
     implementation 'com.univocity:univocity-parsers:2.8.4' // csv parser
     implementation 'org.apache.commons:commons-csv:1.8'
+    implementation 'org.apache.commons:commons-compress:1.20'
+    implementation group: 'org.tukaani', name: 'xz', version: '1.8'
+    implementation group: 'com.github.luben', name: 'zstd-jni', version: '1.4.5-7'
+
 
     implementation 'org.slf4j:slf4j-api:1.7.30'
     implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.13.1'
