change distro and add osx to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,15 @@
 language: groovy
 
 arch: amd64    # routes to a full VM
-os: linux            
-dist: focal          
+os: 
+  - linux
+  - osx
+dist: bionic  
+
+jobs:
+  include:
+    - os: osx
+      osx_image: xcode9.3
 
 env:
   global:
@@ -14,19 +21,18 @@ jdk:
   - oraclejdk12
   - oraclejdk13
   - oraclejdk14
-  - oraclejdk-ea
   - openjdk8
   - openjdk11
   - openjdk12
   - openjdk13
   - openjdk14
   - openjdk15
-  - openjdk-ea
+
   
 matrix:
   allow_failures:
-    - jdk: openjdk-ea
-    - jdk: oraclejdk-ea
+    - os: osx
+
 
 script:
   - java -version
