--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ arch: amd64    # routes to a full VM
 os: 
   - linux
   - osx
-dist: bionic  
+dist: xenial  
 
 jobs:
   include:
@@ -18,13 +18,9 @@ env:
 jdk:
   - oraclejdk8
   - oraclejdk11
-  - oraclejdk12
-  - oraclejdk13
   - oraclejdk14
   - openjdk8
   - openjdk11
-  - openjdk12
-  - openjdk13
   - openjdk14
   - openjdk15
 
