--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'idea'
 
 
 group = 'cz.siret'
-version = '2.2-dev.8'
+version = '2.2-rc.1'
 
 description = 'Ligand binding site prediction based on machine learning.'
 
