--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,6 @@ allprojects {
 }
 
 repositories {
-    jcenter()
     mavenCentral()
     mavenLocal()
     flatDir(dirs: 'lib')
@@ -111,6 +110,12 @@ test {
 
 configurations {
     runtimeClasspath.extendsFrom implementation
+}
+
+configurations.all { // fix gradle 7.0 warning related to xml-apis
+    resolutionStrategy {
+        force 'xml-apis:xml-apis:1.4.01'
+    }
 }
 
 dependencies {
