--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'idea'
 
 
 group = 'cz.siret'
-version = '2.3-dev.3'
+version = '2.3'
 
 
 description = 'Ligand binding site prediction based on machine learning.'
