--- a/.github/workflows/mac_java15.yml
+++ b/.github/workflows/mac_java15.yml
@@ -1,4 +1,4 @@
-name: Windows Java 11
+name: MacOS Java 15
 
 on:
   push:
@@ -9,15 +9,17 @@ on:
 jobs:
   build:
 
-    runs-on: windows-latest
+    runs-on: macos-latest
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 11
+    - name: Set up JDK 15
       uses: actions/setup-java@v2
       with:
-        java-version: '11'
+        java-version: '15'
         distribution: 'adopt'
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
     - name: Validate Gradle wrapper
       uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
     - name: Build with Gradle
