--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ apply plugin: 'idea'
 
 
 group = 'cz.siret'
-version = '2.3.1'
+version = '2.4-dev.2'
 
 
 description = 'Ligand binding site prediction based on machine learning.'
@@ -142,13 +142,13 @@ configurations.all { // fix gradle 7.0 warning related to xml-apis
 
 dependencies {
 
-    implementation 'org.codehaus.groovy:groovy-all:3.0.8' // 3.0.5 to 3.0.7 are buggy
+    implementation 'org.codehaus.groovy:groovy-all:3.0.9' // 3.0.5 to 3.0.7 are buggy
 
     implementation 'org.codehaus.gpars:gpars:1.2.1'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
     implementation 'commons-io:commons-io:2.11.0'
-    implementation 'com.google.guava:guava:30.1.1-jre'
-    implementation 'com.google.code.gson:gson:2.8.7'
+    implementation 'com.google.guava:guava:31.0.1-jre'
+    implementation 'com.google.code.gson:gson:2.8.8'
     implementation 'com.univocity:univocity-parsers:2.9.1' // csv parser
     implementation 'org.apache.commons:commons-csv:1.8'
     implementation 'org.zeroturnaround:zt-zip:1.14'
@@ -157,10 +157,10 @@ dependencies {
     implementation group: 'com.github.luben', name: 'zstd-jni', version: '1.5.0-4'
 
 
-    implementation 'org.slf4j:slf4j-api:1.7.31'
+    implementation 'org.slf4j:slf4j-api:1.7.32'
     implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.14.1'
     implementation 'org.apache.logging.log4j:log4j-core:2.14.1'
-    implementation 'org.slf4j:jul-to-slf4j:1.7.31'         // for netlib logging messages
+    implementation 'org.slf4j:jul-to-slf4j:1.7.32'         // for netlib logging messages
 
     implementation 'org.biojava:biojava-core:5.4.0'
     implementation 'org.biojava:biojava-alignment:5.4.0'
