--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest, windows-latest, macos-latest ]
-        java-version: [ '8', '11', '15', '16' ]
+        java-version: [ '8', '11', '15', '16', '17' ]
 
     steps:
     - uses: actions/checkout@v2
