--- a/build.gradle
+++ b/build.gradle
@@ -155,7 +155,7 @@ dependencies {
     implementation 'org.apache.commons:commons-compress:1.21'
     implementation group: 'org.tukaani', name: 'xz', version: '1.9'
     implementation group: 'com.github.luben', name: 'zstd-jni', version: '1.5.0-4'
-
+    implementation 'com.github.dpaukov:combinatoricslib3:3.3.2'
 
     implementation 'org.slf4j:slf4j-api:1.7.32'
     implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.14.1'
