--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ apply plugin: 'idea'
 
 
 group = 'cz.siret'
-version = '2.4-dev.7'
+version = '2.4-beta.2'
 
 
 description = 'Ligand binding site prediction based on machine learning.'
