--- a/.github/workflows/develop-adopt-openj9.yml
+++ b/.github/workflows/develop-adopt-openj9.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest, windows-latest, macos-latest ]
-        java-version: [ '8', '11', '16', '17', '18' ]
+        java-version: [ '8', '11', '16', '17' ]  # stops with 17
 
     steps:
     - uses: actions/checkout@v2
