--- a/build.gradle
+++ b/build.gradle
@@ -135,7 +135,7 @@ configurations {
 
 dependencies {
 
-    implementation 'org.apache.groovy:groovy:4.0.4'
+    implementation 'org.apache.groovy:groovy:4.0.4' // 4.0.7 is buggy
 
     implementation 'org.codehaus.gpars:gpars:1.2.1'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
@@ -156,9 +156,9 @@ dependencies {
     implementation 'org.apache.logging.log4j:log4j-core:2.19.0'
     implementation 'org.slf4j:jul-to-slf4j:2.0.6'         // for netlib logging messages
 
-    implementation 'org.biojava:biojava-core:6.0.5'
-    implementation 'org.biojava:biojava-alignment:6.0.5'
-    implementation 'org.biojava:biojava-structure:6.0.5'
+    implementation 'org.biojava:biojava-core:6.1.0'
+    implementation 'org.biojava:biojava-alignment:6.1.0'
+    implementation 'org.biojava:biojava-structure:6.1.0'
 
     implementation 'org.openscience.cdk:cdk-qsarmolecular:2.8'    // for NumericalSurface class
     implementation 'org.openscience.cdk:cdk-data:2.8'             // for Atom class
