--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {  // for "com.github.ben-manes.versions" plugin
         }
     }
     dependencies {
-        classpath "com.github.ben-manes:gradle-versions-plugin:0.44.0"
+        classpath "com.github.ben-manes:gradle-versions-plugin:0.45.0"
     }
 }
 
@@ -135,7 +135,7 @@ configurations {
 
 dependencies {
 
-    implementation 'org.apache.groovy:groovy:4.0.4' // 4.0.7 is buggy
+    implementation 'org.apache.groovy:groovy:4.0.4' // 4.0.5-9 are buggy
 
     implementation 'org.codehaus.gpars:gpars:1.2.1'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
