fix google actions

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -27,4 +27,6 @@ jobs:
     - name: Validate Gradle wrapper
       uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
     - name: Build with Gradle
-      run: ./gradlew build
+      run: ./gradlew assemble
+    - name: Run unit tests
+      run: ./gradlew test
