--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ apply plugin: 'groovy'
 apply plugin: 'java'
 
 group = 'cz.siret'
-version = '2.4.1-beta.4'
+version = '2.4.1-beta.5'
 
 
 description = 'Ligand binding site prediction based on machine learning.'
@@ -135,7 +135,7 @@ configurations {
 
 dependencies {
 
-    implementation 'org.apache.groovy:groovy:4.0.4' // 4.0.5-9 are buggy
+    implementation 'org.apache.groovy:groovy:4.0.10' // 4.0.5-9 are buggy - probems with Ligands.groovy @CompileStatic
 
     implementation 'org.codehaus.gpars:gpars:1.2.1'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
