move modified biojava-structure-6.1.0-rdk1.jar to project-local mvn repo

--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,9 @@ repositories {
     mavenCentral()
     mavenLocal()
     maven {url "https://repository.jboss.org/nexus/content/repositories/thirdparty-releases/" }
+    maven {
+        url = file('lib/local-mvn-repo')
+    }
     flatDir(dirs: 'lib')
 }
 
