--- a/build.gradle
+++ b/build.gradle
@@ -162,8 +162,7 @@ dependencies {
 
     implementation 'org.biojava:biojava-core:7.0.2'
     implementation 'org.biojava:biojava-alignment:7.0.2'
-    implementation 'org.biojava:biojava-structure:7.0.2'  // todo update to rdk version
-//    implementation 'org.biojava:biojava-structure:6.1.0-rdk1'
+    implementation 'org.biojava:biojava-structure:7.0.2-rdk1'
 
     implementation 'org.openscience.cdk:cdk-qsarmolecular:2.8'    // for NumericalSurface class
     implementation 'org.openscience.cdk:cdk-data:2.8'             // for Atom class
