--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ apply plugin: 'groovy'
 apply plugin: 'java'
 
 group = 'cz.siret'
-version = '2.5.0-dev.1-biojava7'
+version = '2.5.0-dev.2'
 
 
 description = 'Ligand binding site prediction based on machine learning.'
