--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -23,7 +23,7 @@ jobs:
       uses: actions/setup-java@v3
       with:
         java-version: ${{ matrix.java-version }}
-        distribution: 'temurin'
+        distribution: 'oracle'
     - name: Validate Gradle wrapper
       uses: gradle/wrapper-validation-action@v1
     - name: Build with Gradle
