--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest, windows-latest, macos-latest ]
-        java-version: [ '11', '17', '20', '21' ]
+        java-version: [ '17', '20', '21' ]
 
     steps:
     - uses: actions/checkout@v3
