--- a/build.gradle
+++ b/build.gradle
@@ -165,7 +165,7 @@ dependencies {
     implementation 'org.biojava:biojava-structure:7.0.2-rdk1'
 
     implementation 'org.openscience.cdk:cdk-qsarmolecular:2.9'    // for NumericalSurface class
-    implementation 'org.openscience.cdk:cdk-data:2.9'             // for Atom class
+    implementation 'org.openscience.cdk:cdk-silent:2.9'             // for Atom class
 
     implementation 'nz.ac.waikato.cms.weka:weka-dev:3.9.6'
 
