--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,8 @@ buildscript {  // for "com.github.ben-manes.versions" plugin
     }
 }
 
-apply plugin: "com.github.ben-manes.versions"   //  ./gradlew dependencyUpdates
+apply plugin: "com.github.ben-manes.versions"   //  ./gradlew dependencyUpdates 
+
 apply plugin: 'groovy'
 apply plugin: 'java'
 
@@ -136,16 +137,40 @@ configurations {
     runtimeClasspath.extendsFrom implementation
 }
 
+/**
+ * Returns an int representing how mature [version] is.
+ * Higher numbers are more mature.
+ */
+static def maturityLevel(String version) {
+    /**
+     * Version qualifiers, in order from least to most mature.
+     * The most mature is to have no qualifier at all.
+     */
+    def qualifiers = ["preview", "alpha", "beta", "m", "cr", "rc"]
+    def qualifiersRegex = qualifiers.collect { /(?i).*[.\-]$it[.\-\d]*/ }
+
+    def index = qualifiersRegex.findIndexOf { version ==~ it }
+    return (index < 0) ? qualifiers.size : index
+}
+
+tasks.named("dependencyUpdates").configure {
+    rejectVersionIf {
+        def candidateMaturity = maturityLevel(it.candidate.version)
+        def currentMaturity = maturityLevel(it.currentVersion)
+        candidateMaturity < currentMaturity
+    }
+}
+
 
 dependencies {
 
-    implementation 'org.apache.groovy:groovy:4.0.16' // 4.0.5-9,13 are buggy - probems with Ligands.groovy @CompileStatic
+    implementation 'org.apache.groovy:groovy:4.0.17' // 4.0.5-9,13 are buggy - probems with Ligands.groovy @CompileStatic
 
     implementation 'org.codehaus.gpars:gpars:1.2.1'
     implementation 'org.apache.commons:commons-lang3:3.14.0'
     implementation 'org.apache.commons:commons-math3:3.6.1'
     implementation 'commons-io:commons-io:2.15.1'
-    implementation 'com.google.guava:guava:32.1.3-jre'
+    implementation 'com.google.guava:guava:33.0.0-jre'
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.univocity:univocity-parsers:2.9.1' // csv parser
     implementation 'org.apache.commons:commons-csv:1.10.0'
@@ -156,8 +181,8 @@ dependencies {
     implementation 'com.github.dpaukov:combinatoricslib3:3.3.3'
 
     implementation 'org.slf4j:slf4j-api:1.7.36'
-    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.20.0'
-    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
+    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.22.1'
+    implementation 'org.apache.logging.log4j:log4j-core:2.22.1'
     implementation 'org.slf4j:jul-to-slf4j:1.7.36'         // for netlib logging messages
 
     implementation 'org.biojava:biojava-core:7.0.2'
