--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -15,17 +15,17 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest, windows-latest, macos-latest ]
-        java-version: [ '17', '20', '21' ]
+        java-version: [ '8', '11', '17', '20', '21' ]
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Set up JDK ${{ matrix.java-version }}
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
         java-version: ${{ matrix.java-version }}
-        distribution: 'oracle'
+        distribution: 'temurin'
     - name: Validate Gradle wrapper
-      uses: gradle/wrapper-validation-action@v1
+      uses: gradle/wrapper-validation-action@v2
     - name: Build with Gradle
       run: ./gradlew assemble
     - name: Run unit tests
