--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,7 @@ apply plugin: 'groovy'
 apply plugin: 'java'
 
 group = 'cz.siret'
-version = '2.5-dev.6'
-
+version = '2.5-dev.6.fo4'
 
 description = 'Ligand binding site prediction based on machine learning.'
 
