--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -24,11 +24,22 @@ jobs:
       with:
         java-version: ${{ matrix.java-version }}
         distribution: 'temurin'
+
+    - name: Setup Gradle
+      uses: gradle/actions/setup-gradle@v3
+      with:
+        build-scan-publish: true
+        build-scan-terms-of-use-url: "https://gradle.com/terms-of-service"
+        build-scan-terms-of-use-agree: "yes"
+
     - name: Validate Gradle wrapper
       uses: gradle/wrapper-validation-action@v3
+
     - name: Check dependencies
       run: ./gradlew dependencies
+
     - name: Build with Gradle
       run: ./gradlew assemble
+      
     - name: Run unit tests
       run: ./gradlew test
