--- a/build.gradle
+++ b/build.gradle
@@ -179,7 +179,7 @@ dependencies {
     implementation 'org.tukaani:xz:1.9'
     implementation 'com.github.luben:zstd-jni:1.5.6-3'
     implementation 'com.github.dpaukov:combinatoricslib3:3.4.0'
-    implementation 'us.ihmc:euclid:0.21.0'
+    //implementation 'us.ihmc:euclid:0.21.0'
 
     implementation 'org.slf4j:slf4j-api:1.7.36'
     implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.23.1'
