--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ apply plugin: 'groovy'
 apply plugin: 'java'
 
 group = 'cz.siret'
-version = '2.4.2-rc.1'
+version = '2.4.2'
 
 
 description = 'Ligand binding site prediction based on machine learning.'
