--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ apply plugin: 'groovy'
 apply plugin: 'java'
 
 group = 'cz.siret'
-version = '2.4.2'
+version = '2.5-dev.6'
 
 
 description = 'Ligand binding site prediction based on machine learning.'
@@ -26,8 +26,8 @@ description = 'Ligand binding site prediction based on machine learning.'
 
 allprojects {
     apply plugin: 'java'
-    sourceCompatibility = 11
-    targetCompatibility = 11
+    sourceCompatibility = 17
+    targetCompatibility = 17
 }
 
 repositories {
