--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ apply plugin: 'groovy'
 apply plugin: 'java'
 
 group = 'cz.siret'
-version = '2.5-dev.6.fo4'
+version = '2.5-dev.6.biojava71'
 
 description = 'Ligand binding site prediction based on machine learning.'
 
@@ -185,9 +185,9 @@ dependencies {
     implementation 'org.apache.logging.log4j:log4j-core:2.23.1'
     implementation 'org.slf4j:jul-to-slf4j:1.7.36'         // for netlib logging messages
 
-    implementation 'org.biojava:biojava-core:7.0.2'
-    implementation 'org.biojava:biojava-alignment:7.0.2'
-    implementation 'org.biojava:biojava-structure:7.0.2-rdk1'
+    implementation 'org.biojava:biojava-core:7.1.1'
+    implementation 'org.biojava:biojava-alignment:7.1.1'
+    implementation 'org.biojava:biojava-structure:7.1.1'
 
     implementation 'org.openscience.cdk:cdk-qsarmolecular:2.9'    // for NumericalSurface class
     implementation 'org.openscience.cdk:cdk-silent:2.9'             // for Atom class
